Returned mobile nav back to position fixed and applied infinite bleed

--- a/app/assets/stylesheets/mobile-nav.css
+++ b/app/assets/stylesheets/mobile-nav.css
@@ -6,26 +6,32 @@
   display: none;
 }
 
-.mobile-layout-wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100dvh;
-}
-
 @media (max-width: 720px) and (hover: none) and (pointer: coarse) {
   .mobile-nav {
-    position: sticky;
+    position: fixed;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     bottom: 0;
+    left: 0;
     z-index: 100;
     width: 100%;
     pointer-events: none;
     background-color: var(--color-button);
     box-shadow: var(--shadow-mobile-nav) var(--color-mobile-nav-shadow);
-    padding-bottom: calc(var(--space-sm) + env(safe-area-inset-bottom));
+    padding-bottom: env(safe-area-inset-bottom);
+  }
+
+  .mobile-nav::after {
+    content: "";
+    position: absolute;
+    top: 99%;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    background-color: var(--color-button);
+    z-index: -1;
   }
 
   .mobile-nav-container {
@@ -33,8 +39,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
     width: 100%;
+    min-height: 70px;
     pointer-events: auto;
   }
 
